--- a/src_practice/stylesheets/main.scss
+++ b/src_practice/stylesheets/main.scss
@@ -2,3 +2,16 @@
   width: 700px;
   margin-top: 50px;
 }
+
+.nav{
+  margin: 30px 0 20px 0;
+}
+
+.users-pagination{
+  margin-top: 0;
+}
+
+.progress{
+  magin: 10px auto;
+  width: 300px;
+}
